--- a/Jaipur Hackthon/index.html
+++ b/Jaipur Hackthon/index.html
@@ -9,7 +9,7 @@
 	
 	<div class="bat">
 		<img src="main.jpg" >
-		<h1>Welcome to our site</h1>
+		<h1>Welcome to our Website</h1>
 		<h2>Get to know which shop is open near you and when it is !</h2>
 	</div>
 <div class="hen">
